# fast_sparse_interpolation

./: .gitignore  CMakeLists.txt  Makefile  README.md  header.txt
src/: Interpolation.cpp  Interpolation.hpp  Iterators.hpp
test/: common.hpp  main.cpp  performance.cpp  plot.py  surf_plot.py  tex_head.txt  tex_line_plot.py  tex_tail.txt
